Changed the code so that every time the Take Test gutton is clicked the previous results are removed from the Ordered List.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Fizz-Buzz Test</h1>
         <p class="lead">Please click on the buttons below to proceed with the Fizz-Buzz Test.</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button" id = "test-button">Take Test</a></p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button" id = "clear-button">Reload</a></p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button" id = "clear-button">Clear</a></p>
     
       <ol class="unstyled" id="output" start = "1">
 
